font changes + mobile version

--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
   <meta charset="utf-8">
   <title>Creative 2</title>
   <link rel="stylesheet" href="styles/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 
-
-
   <div class="title-bar">
     <h1>Joke API</h1>
   </div>
-
-
 
   <div class="page-wrap">
 
@@ -42,16 +39,19 @@
       <input id="twopart-radio" type="radio" value="twopart" name="type"></input>
       <label for="twopart-radio">Two part</label><br> -->
 
-      <label>
-        <input id="single-radio" type="radio" value="single" name="type" checked></input>
-        <span>Single</span>
-      </label>
+      <div class="check1">
+        <label>
+          <input id="single-radio" type="radio" value="single" name="type" checked></input>
+          <span>Single</span>
+        </label>
+      </div>
 
-      <label>
-        <input id="single-radio" type="radio" value="single" name="type"></input>
-        <span>Twopart</span>
-      </label>
-
+      <div class="check2">
+        <label>
+          <input id="single-radio" type="radio" value="single" name="type"></input>
+          <span>Twopart</span>
+        </label>
+      </div>
     </form>
 
     <div class="joke" id="joke">
@@ -61,7 +61,9 @@
   </div>
 
   <div class="footer">
-
+    <h6 class="footer-link">(801) 123-4567</h6>
+    <h6 class="footer-link">carolinejarman@gmail.com</h6>
+    <h6 class="footer-link"><a class="github" href="https://github.com/carolinerose24/creative2" target="_blank">Github</a></h6>
   </div>
 
 
