--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <span>Single</span>
         </label>
       </div>
+      <br class="hide"> <br class="hide">
 
       <div class="check2">
         <label>
