desktop media queries

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   </div>
 
   <div class="page-wrap">
-
-
     <h2>Click a button to generate a joke!</h2>
 
     <form class="buttons">
@@ -24,28 +22,16 @@
       <button id="punSubmit" type="button">Pun</button>
       <button id="darkSubmit" type="button">Dark</button>
       <button id="miscSubmit" type="button">Miscellaneous</button>
-
-      <!-- <input id="programmingSubmit"value="Programming"></input> -->
-      <!-- <input id="punSubmit" type="submit" value="Pun"></input> -->
-      <!-- <input id="darkSubmit" type="submit" value="Dark"></input> -->
-      <!-- <input id="miscSubmit" type="submit" value="Miscellaneous"></input> -->
       <br>
     </form>
 
-
     <form class="radio">
-      <!-- <input id="single-radio" type="radio" value="single" name="type" checked></input>
-      <label for="single-radio">Single</label><br>
-      <input id="twopart-radio" type="radio" value="twopart" name="type"></input>
-      <label for="twopart-radio">Two part</label><br> -->
-
       <div class="check1">
         <label>
           <input id="single-radio" type="radio" value="single" name="type" checked></input>
           <span>Single</span>
         </label>
       </div>
-      <br class="hide"> <br class="hide">
 
       <div class="check2">
         <label>
@@ -55,9 +41,7 @@
       </div>
     </form>
 
-    <div class="joke" id="joke">
-
-    </div>
+    <div class="joke" id="joke"></div>
 
   </div>
 
@@ -66,9 +50,6 @@
     <h6 class="footer-link">carolinejarman@gmail.com</h6>
     <h6 class="footer-link"><a class="github" href="https://github.com/carolinerose24/creative2" target="_blank">Github</a></h6>
   </div>
-
-
-
 
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
